# svelte5-fastapi-hello-world-template

./: CHANGELOG.md  README.md
.github/workflows/: test_backend.yml  test_frontend.yml
backend/: LICENSE.txt  pyproject.toml
backend/src/backend/: __about__.py  __init__.py
backend/src/backend/app/: main.py
backend/tests/: test_backend.py
frontend/: package-lock.json  package.json
